--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,32 +1,46 @@
+body, header, nav, main, footer, h1, div, img, ul {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
 body {
-    background-color: #ccc;
+    background-color: #000; 
+}
+
+img {
+    max-width: 100%;
+    display: block;
 }
 
 header {
-    float: left;
-    width: 25%;
-    font-size: .80em;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #000;
+    height: 190px;
 }
 
-header h1 {
-    padding-bottom: 1em;
+header img {
+    background-color: gray;
+    margin: 0 auto;
 }
 
 nav {
-    float: right;
-    margin: 5em 3em 0 0;
-    width: 70%;
+    padding: 1%;
+    margin-bottom: 1%;
 }
 
 nav ul {
     list-style-type: none;
     margin: 0;
-    text-align: right;
+    text-align: center;
 }
 
 nav li {
-    display: inline-block;
-    font-size: 1.55em;
+    font-size: 1.5em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    border-top: 1px solid #fff;
 }
 
 nav li a {
@@ -39,6 +53,68 @@ nav li a {
 
 main {
     clear: left;
+    background-color: #fff;
+    padding: 2%;
+    font-size: 1.25em;
+}
+
+.action {
+    font-size: 1.35em;
+    color: #666600;
+    font-weight: bold;
+}
+
+#weights, #cardio, #training {
+    width: 29%;
+    float: left;
+    margin: 0 2%;
+}
+
+#exercises {
+    clear: left;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background-color: #f2f2f2;
+    padding: 1% 2%;
+}
+
+#exercises dt {
+    font-weight: bold;
+}
+
+#exercises dd {
+    padding: 0.5% 1% 2% 0;
+}
+
+.external-link {
+    color: #666600;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+#contact {
+    text-align: center;
+}
+
+#contact a {
+    color: #666600;
+    text-decoration: none;
+}
+
+.map {
+    border: 8px solid #000;
+}
+
+footer p {
+    font-size: 0.75em;
+    text-align: center;
+    color: #fff;
+    padding: 0 1em;
+}
+
+footer p a {
+    color: #fff;
+    text-decoration: none;
 }
 
 h1 {
@@ -49,3 +125,4 @@ h1 {
     width: 80%;
     margin: 0 auto;
 }
+
