Add more css for RWD

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,8 +22,7 @@ header {
 }
 
 header img {
-    background-color: gray;
-    margin: 0 auto;
+    margin: 7em auto;
 }
 
 nav {
@@ -43,10 +42,13 @@ nav li {
     border-top: 1px solid #fff;
 }
 
+nav li:first-child {
+    border-top: none;
+}
+
 nav li a {
     display: block;
     color: #fff;
-    text-align: center;
     padding: 0.5em 1em;
     text-decoration: none;
 }
@@ -56,6 +58,7 @@ main {
     background-color: #fff;
     padding: 2%;
     font-size: 1.25em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .action {
