Refactored site for mobile first design

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,12 +53,39 @@ nav li a {
     text-decoration: none;
 }
 
+.mobile {
+    display: block;
+}
+
+.tablet.desktop {
+    display: none;
+}
+
 main {
-    clear: left;
     background-color: #fff;
     padding: 2%;
-    font-size: 1.25em;
+    font-size: 1.15em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.tel-link {
+    background-color: #404040;
+    padding: 2%;
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.tel-link a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5em;
+    display: block;
+}
+
+.hours {
+    margin-left: 10%;
 }
 
 .action {
@@ -68,25 +95,11 @@ main {
 }
 
 #weights, #cardio, #training {
-    width: 29%;
-    float: left;
     margin: 0 2%;
 }
 
-#exercises {
-    clear: left;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
-    background-color: #f2f2f2;
-    padding: 1% 2%;
-}
-
-#exercises dt {
-    font-weight: bold;
-}
-
-#exercises dd {
-    padding: 0.5% 1% 2% 0;
+.round {
+    border-radius: 8px;
 }
 
 .external-link {
@@ -95,8 +108,15 @@ main {
     text-decoration: none;
 }
 
-#contact {
-    text-align: center;
+#contact .contact-email-link {
+    color: #666600;
+    text-decoration: none;
+}
+
+.map {
+    border: 2px solid #000;
+    width: 95%;
+    height: 50%;
 }
 
 #contact a {
@@ -128,4 +148,21 @@ h1 {
     width: 80%;
     margin: 0 auto;
 }
+
+/*#exercises {
+    clear: left;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background-color: #f2f2f2;
+    padding: 1% 2%;
+}
+
+#exercises dt {
+    font-weight: bold;
+}
+
+#exercises dd {
+    padding: 0.5% 1% 2% 0;
+}*/
+
 
