--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@ File: global.css
 */
 
 /* CSS Reset */
-body, header, nav, footer, h1, div, img {
+body, header, nav, footer, h1, div, img, ul {
     margin: 0;
     padding: 0;
     border: 0;
@@ -21,51 +21,83 @@ img {
     display: block;
 }
 
-/* style rules for header */
+/* Style rules for mobile viewport */
 header {
-    width: 25%;
-    float: left;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-color: #000;
+    height: 190px;
 }
 
-/* My Config */
-header a img {
-    margin: 3em 3em;
+header img {
+    margin: 0 auto;
+    padding-top: 4em;
 }
 
 /* style rules for navigation */
 nav {
-    width: 70%;
-    float: right;
-    margin: 5em 3em 0 0;
+    padding: 1%;
+    margin-bottom: 1%;
 }
 
 nav ul {
     list-style-type: none;
-    margin: 0;
-    text-align: right;
+    text-align: center;
 }
 
 nav li {
-    display: inline-block;
     font-size: 1.50em;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: bold;
+    border-top: 1px solid #fff;
+}
+
+nav li:first-child {
+    border-top: none;
 }
 
 nav li a {
     display: block;
     color: #fff;
-    text-align: center;
     padding: 0.5em 1em;
     text-decoration: none;
 }
 
+/* show mobile class, hide tablet-desktop class */
+.mobile {
+    display: block;
+}
+
+.tablet-desktop {
+    display: none;
+}
+
 /* style rules for main content */
 main {
-    clear: left;
     background-color: #fff;
     padding: 2%;
-    font-size: 1.25em;
+    font-size: 1.15em;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+.tel-link {
+    background-color: #404040;
+    padding: 2%;
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.tel-link a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5em;
+    display: block;
+}
+
+.hour {
+    margin-left: 10%;
 }
 
 .action {
@@ -75,25 +107,11 @@ main {
 }
 
 #weights, #cardio, #training {
-    width: 29%;
-    float: left;
     margin: 0 2%;
 }
 
-#exercises {
-    clear: left;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
-    background-color: #f2f2f2;
-    padding: 1% 2%;
-}
-
-#exercises dt {
-    font-weight: bold;
-}
-
-#exercises dd {
-    padding: 0.5% 1% 2% 0;
+.round {
+    border-radius: 8px;
 }
 
 .external-link {
@@ -106,13 +124,15 @@ main {
     text-align: center;
 }
 
-#contact a {
+#contact .contact-email-link {
     color: #666600;
     text-decoration: none;
 }
 
 .map {
-    border: 8px solid #000;
+    border: 2px solid #000;
+    width: 95%;
+    height: 50%;
 }
 
 /* style rules for footer */
@@ -127,3 +147,19 @@ footer p a {
     color: #fff;
     text-decoration: none;
 }
+
+/*#exercises {
+    clear: left;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
+    background-color: #f2f2f2;
+    padding: 1% 2%;
+}
+
+#exercises dt {
+    font-weight: bold;
+}
+
+#exercises dd {
+    padding: 0.5% 1% 2% 0;
+}*/
